--- a/ODataEfCoreWebApp/ODataEfCoreWebApp.csproj
+++ b/ODataEfCoreWebApp/ODataEfCoreWebApp.csproj
@@ -8,7 +8,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    
+    <!-- 4 Lines: 0-->
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.1.0" />
+    
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
   </ItemGroup>
 
